Fri Nov 29 17:01:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- add support for RPC using TDS5 (not tested)

Fri Nov 29 12:34:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/rpc.c src/tds/query.c:
	- added column_output for specify output parameters

Fri Nov 29 11:38:26 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: small optimization and remove TODO

Fri Nov 29 11:28:33 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: use column_type in parameters, not nullable

Thu Nov 28 21:18:31 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: add flag to tds_put_data_info*

Wed Nov 27 14:39:46 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c	support bcp_options for hints
	* include/sybdb.h reordered bcp declarations
	- declared bcp structure for dbproc, added hint pointer

Wed Nov 27 00:20:51 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c use setlocale and nl_language to find client charset.
	
Mon Nov 25 23:09:52 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c fixed stupid pointer problems in dbrpcinit and dbrpcparam
	- dbsqlok now fails w/error, no segfault.  

Mon Nov 25 11:44:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: small improve

Mon Nov 25 10:09:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/common.c:
	- best checks, ignore some possible strange tokens

Sun Nov 24 13:00:08 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c  first plausible implementation.  Not tested.  

Sun Nov 24 15:00:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c: spell fix, remove old TODO
	* src/tds/login.c:
	- use database field in TDS7+ login
	- reuse tds_put_string instead of converting every time
	- remove a buffer overflow limiting password to 128 characters
